variables and copy file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,30 @@ release:
 
 delivery:
     stage: deliver
+    variables:
+        MIU_PATH: "/opt/staging/miu"
+        INC_PATH: "$MIU_PATH/include"
+        DBG_PATH: "$MIU_PATH/lib-dbg"
+        REL_PATH: "$MIU_PATH/lib-rel"
+        BIN_PATH: "$MIU_PATH/binaries"
+        UT_PATH: "$MIU_PATH/unittest"
     script:
         - ./build debug
-        - ./build release 
-        - echo 'copy headers, libraries and binaries to staging path'
+        - ./build release
+
+          #- mkdir -p $INC_PATH
+          #- rm -fr $INC_PATH/com
+          #- cp -frv ./include/com $INC_PATH
+
+          #- mkdir -p $DBG_PATH
+          #- cp -fv debug/libcom.a $DBG_PATH
+
+          #- mkdir -p $REL_PATH
+          #- cp -fv release/libcom.a $REL_PATH
+
+          #- mkdir -p $UT_PATH
+          #- cp -fv release/ut_com $UT_PATH
+
     only:
         - master
 
