--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required (VERSION 3.19)
 project("${CMAKE_PROJECT_NAME}")
 include("$ENV{TOOLCHAIN_PATH}/CMakeLists.txt.in")
 
-add_lib("lib${CMAKE_PROJECT_NAME}" "source/lib")
-
-add_bin("${CMAKE_PROJECT_NAME}" "source/bin"
-    lib${CMAKE_PROJECT_NAME}
+add_lib("libimpl" "source/lib")
+add_bin("testmkt" "source/bin" libimpl
+    ${LIB_MKT_SVC} ${LIB_MKT} ${LIB_REF} ${LIB_MIU}
+)
+add_unittest(libimpl
+    ${LIB_MKT_SVC} ${LIB_MKT} ${LIB_REF}
+    ${LIB_JOB} ${LIB_CMD} ${LIB_ASP}
+    ${LIB_NET} ${LIB_SHM} ${LIB_CFG} ${LIB_LOG}
+    ${LIB_COM}
 )
 
-add_unittest(lib${CMAKE_PROJECT_NAME} ${LIB_COM})
-
-add_benchmark(lib${CMAKE_PROJECT_NAME})
