--- a/build
+++ b/build
@@ -1,11 +1,11 @@
 #!/usr/bin/bash
 
-PROJECT_NAME=project
+PROJECT_NAME=testmkt
 BUILD_VERBOSE=OFF
 source $TOOLCHAIN_PATH/build.in
 
 if [[ $1 == "command" ]]; then
-    echo "project specific command"
+    echo "testmkt specific command"
 
 else
      echo "ERROR: unknown command"
