Resolve "impl adapter"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,18 +31,8 @@ delivery:
         - ./build debug
         - ./build release
 
-          #- mkdir -p $INC_PATH
-          #- rm -fr $INC_PATH/com
-          #- cp -frv ./include/com $INC_PATH
-
-          #- mkdir -p $DBG_PATH
-          #- cp -fv debug/libcom.a $DBG_PATH
-
-          #- mkdir -p $REL_PATH
-          #- cp -fv release/libcom.a $REL_PATH
-
-          #- mkdir -p $UT_PATH
-          #- cp -fv release/ut_com $UT_PATH
+        - mkdir -p $BIN_PATH
+        - cp -fv release/testmkt $BIN_PATH
 
     only:
         - master
